  * Remove Winesteam runner (install Steam for Windows in Lutris instead)
  * PC (Linux and Windows) games have their own dedicated Nvidia shader cache
  * Add dgvoodoo2 option
  * Add option to enable BattleEye anti-cheat support
  * Default to Retroarch cores in ~/.config/retroarch/cores if available
  * Add support for downloading patches and DLC for GOG games
  * Add --export command line flag to export a game (requires --dest for
    the destination path)
  * Enable F-Sync by default

 -- Mathieu Comandon <strider@strycore.com>  Fri, 04 Feb 2022 19:14:41 -0800

lutris (0.5.9.1) hirsute; urgency=medium

  * Fix possible escaping error for gamescope option
  * Remove walrus operator to restore compatibility with Python 3.7 / Ubuntu 18.04
  * Remove log file being written in the home folder
  * Fix install button for community installer
  * Fix markup error on gamescope option
  * Update URL for Ryujinx build
  * Fix Steam sync creating duplicate games

 -- Mathieu Comandon <strider@strycore.com>  Sat, 16 Oct 2021 18:08:26 -0700

lutris (0.5.9) hirsute; urgency=medium

  * Add initial support for Epic Games Store
  * Add support for Steam for Windows as a game source
  * Add support for DXVK-NVAPI and DLSS
  * Add FidelityFX Super Resolution (FSR) option for compatible Wine versions
  * Add workaround for locale issues when Lutris is launched from Steam
  * Add gamescope option
  * Lutris games can now be launched from Steam
  * 3rd party services can be enabled or disabled in the preferences
  * The main preferences window has now tabs on the left side
  * Runner configuration is now available from the main preferences window
  * VKD3D is a separate option from DXVK
  * Esync is enabled by default
  * Dolphin is available as a game source (reads games from the emulator's
    local database of games)
  * Scan for installed games when using Steam source
  * Improved automatic installers for GOG, detection of DOSBOX and ScummVM
    games.